--- a/rgallery/View/Base.lproj/Main.storyboard
+++ b/rgallery/View/Base.lproj/Main.storyboard
@@ -91,14 +91,73 @@
                     <view key="view" contentMode="scaleToFill" id="RJ5-xD-ich">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="MeK-6L-yqd">
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WTx-mg-JyK">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="387"/>
+                                        <subviews>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="G6K-gP-02z">
+                                                <rect key="frame" x="0.0" y="0.0" width="414" height="387"/>
+                                            </imageView>
+                                            <label opaque="NO" userInteractionEnabled="NO" alpha="0.75" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="kpi-pW-Skf">
+                                                <rect key="frame" x="4" y="365.5" width="406" height="20.5"/>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="bottom" secondItem="G6K-gP-02z" secondAttribute="bottom" id="6Hv-7U-O1y"/>
+                                            <constraint firstItem="kpi-pW-Skf" firstAttribute="leading" secondItem="WTx-mg-JyK" secondAttribute="leading" constant="4" id="DFI-3k-81P"/>
+                                            <constraint firstAttribute="trailing" secondItem="kpi-pW-Skf" secondAttribute="trailing" constant="4" id="JPv-DG-4dw"/>
+                                            <constraint firstItem="G6K-gP-02z" firstAttribute="top" secondItem="WTx-mg-JyK" secondAttribute="top" id="Mgq-dW-BRP"/>
+                                            <constraint firstAttribute="bottom" secondItem="kpi-pW-Skf" secondAttribute="bottom" constant="1" id="cZb-of-THu"/>
+                                            <constraint firstAttribute="trailing" secondItem="G6K-gP-02z" secondAttribute="trailing" id="saF-Gn-VgR"/>
+                                            <constraint firstItem="G6K-gP-02z" firstAttribute="leading" secondItem="WTx-mg-JyK" secondAttribute="leading" id="tfg-wz-QOl"/>
+                                        </constraints>
+                                    </view>
+                                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="pGP-hN-hCt">
+                                        <rect key="frame" x="0.0" y="387" width="414" height="387"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                        <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="mLn-DP-Bkg">
+                                            <size key="itemSize" width="50" height="50"/>
+                                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                        </collectionViewFlowLayout>
+                                        <cells/>
+                                    </collectionView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="pGP-hN-hCt" firstAttribute="width" secondItem="WTx-mg-JyK" secondAttribute="width" id="8KV-Pu-Azy"/>
+                                    <constraint firstItem="pGP-hN-hCt" firstAttribute="height" secondItem="WTx-mg-JyK" secondAttribute="height" id="F8a-E1-YUu"/>
+                                </constraints>
+                                <variation key="heightClass=compact" axis="horizontal"/>
+                            </stackView>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="MeK-6L-yqd" firstAttribute="top" secondItem="sji-UX-uuS" secondAttribute="top" id="2TO-LN-uQk"/>
+                            <constraint firstItem="sji-UX-uuS" firstAttribute="trailing" secondItem="MeK-6L-yqd" secondAttribute="trailing" id="Lau-JQ-VTd"/>
+                            <constraint firstItem="MeK-6L-yqd" firstAttribute="leading" secondItem="sji-UX-uuS" secondAttribute="leading" id="PLN-r8-vcO"/>
+                            <constraint firstItem="sji-UX-uuS" firstAttribute="bottom" secondItem="MeK-6L-yqd" secondAttribute="bottom" id="ry6-2k-Sun"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="sji-UX-uuS"/>
                     </view>
                     <navigationItem key="navigationItem" id="n80-Um-ain"/>
+                    <connections>
+                        <outlet property="collectionView" destination="pGP-hN-hCt" id="cki-9c-6EW"/>
+                        <outlet property="imageView" destination="G6K-gP-02z" id="skQ-y6-pfP"/>
+                        <outlet property="label" destination="kpi-pW-Skf" id="CYD-6M-fek"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zPN-M4-cTb" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1993" y="139"/>
+            <point key="canvasLocation" x="1992.753623188406" y="138.61607142857142"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="lTY-sh-HWp">
@@ -108,6 +167,7 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="5rA-kS-bbx">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
@@ -119,4 +179,5 @@
             <point key="canvasLocation" x="137.68115942028987" y="138.61607142857142"/>
         </scene>
     </scenes>
+    <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
 </document>
