[RGALLERY-8] UICollectionView supports the Landscape Mode
**What**
Added settings in the storyboard
Rewrited some files
Optimized the code

**Why**
Needed for development

--- a/rgallery/View/Base.lproj/Main.storyboard
+++ b/rgallery/View/Base.lproj/Main.storyboard
@@ -120,11 +120,11 @@
                                             <constraint firstItem="G6K-gP-02z" firstAttribute="leading" secondItem="WTx-mg-JyK" secondAttribute="leading" id="tfg-wz-QOl"/>
                                         </constraints>
                                     </view>
-                                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="pGP-hN-hCt">
+                                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="pGP-hN-hCt">
                                         <rect key="frame" x="0.0" y="387" width="414" height="387"/>
-                                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                                        <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="mLn-DP-Bkg">
-                                            <size key="itemSize" width="50" height="50"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" sectionInsetReference="safeArea" id="mLn-DP-Bkg">
+                                            <size key="itemSize" width="150" height="150"/>
                                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
